--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,27 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 30px;
 }
 
-.top-bar{
-    width : 90vw;
-    display: flex;
-    justify-content: space-between;
+.top-bar {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  overflow-x: hidden; 
+  padding: auto;
 }
- 
+.top-bar-image {
+  width: 100%; 
+   height: auto; 
+  display: block;
+}
+
+.top-bar-div {
+  width: 40%;
+  padding: 0 10px; 
+  
+}
 #participants {
     display: flex;
     flex-direction: row;
@@ -89,4 +102,7 @@ a:visited {
 
 a:hover {
     text-decoration: none;
+}
+.main-heading{
+    text-align: center;
 }
